Project3/Windows/BisonProject/MainDriver/COOL.output
Terminals unused in grammar

   LET_STMT


State 5 conflicts: 1 shift/reduce
State 11 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 138 conflicts: 9 shift/reduce
State 156 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | error ';'
    4           | class class_list
    5           | class_list error ';'

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'
    8      | CLASS error

    9 optional_feature_list: /* empty */
   10                      | feature_list
   11                      | error

   12 feature_list: feature ';'
   13             | error ';'
   14             | feature error
   15             | feature ';' feature_list
   16             | feature error feature_list

   17 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' expr '}'
   18        | OBJECTID ':' TYPEID optional_assign_expr
   19        | error ';'

   20 optional_assign_expr: /* empty */
   21                     | ASSIGN expr

   22 optional_formal_list: /* empty */
   23                     | formal_list

   24 formal_list: formal
   25            | formal ',' formal_list
   26            | formal error formal_list
   27            | error ',' formal_list

   28 formal: OBJECTID ':' TYPEID
   29       | error ':' TYPEID
   30       | OBJECTID error TYPEID
   31       | OBJECTID ':' error

   32 expr: OBJECTID ASSIGN expr
   33     | expr '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   34     | expr '.' OBJECTID '(' optional_expr_list ')'
   35     | OBJECTID '(' optional_expr_list ')'
   36     | IF expr THEN expr ELSE expr FI
   37     | WHILE expr LOOP expr POOL
   38     | '{' expr_seq '}'
   39     | LET let_decl_seq IN expr
   40     | CASE expr OF case_branches ESAC
   41     | NEW TYPEID
   42     | ISVOID expr
   43     | expr '+' expr
   44     | expr '-' expr
   45     | expr '*' expr
   46     | expr '/' expr
   47     | '~' expr
   48     | expr '<' expr
   49     | expr LE expr
   50     | expr '=' expr
   51     | NOT expr
   52     | '(' expr ')'
   53     | OBJECTID
   54     | INT_CONST
   55     | STR_CONST
   56     | BOOL_CONST
   57     | error

   58 let_decl: OBJECTID ':' TYPEID optional_assign_expr
   59         | error

   60 let_decl_seq: let_decl
   61             | let_decl ',' let_decl_seq
   62             | let_decl error let_decl_seq
   63             | error let_decl_seq

   64 optional_expr_list: /* empty */
   65                   | expr_list

   66 expr_list: expr
   67          | expr error
   68          | expr ',' expr_list
   69          | expr error expr_list
   70          | error expr_list

   71 expr_seq: expr ';'
   72         | expr ';' expr_seq
   73         | expr error expr_seq
   74         | error expr_seq

   75 case_branches: case_branch
   76              | case_branch case_branches
   77              | case_branch error case_branches

   78 case_branch: OBJECTID ':' TYPEID DARROW expr ';'
   79            | error


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 33 34 35 52
')' (41) 17 33 34 35 52
'*' (42) 45
'+' (43) 43
',' (44) 25 27 61 68
'-' (45) 44
'.' (46) 33 34
'/' (47) 46
':' (58) 17 18 28 29 31 58 78
';' (59) 3 5 6 7 12 13 15 19 71 72 78
'<' (60) 48
'=' (61) 50
'@' (64) 33
'{' (123) 6 7 17 38
'}' (125) 6 7 17 38
'~' (126) 47
error (256) 3 5 8 11 13 14 16 19 26 27 29 30 31 57 59 62 63 67 69 70
    73 74 77 79
STR_CONST (258) 55
TYPEID (259) 6 7 17 18 28 29 30 33 41 58 78
OBJECTID (260) 17 18 28 30 31 32 33 34 35 53 58 78
INT_CONST (261) 54
BOOL_CONST (262) 56
CLASS (263) 6 7 8
ELSE (264) 36
FI (265) 36
IF (266) 36
IN (267) 39
INHERITS (268) 7
LET (269) 39
LOOP (270) 37
POOL (271) 37
THEN (272) 36
WHILE (273) 37
CASE (274) 40
ESAC (275) 40
OF (276) 40
DARROW (277) 78
NEW (278) 41
ISVOID (279) 42
ASSIGN (280) 21 32
NOT (281) 51
LE (282) 49
LET_STMT (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4 5, on right: 1 4 5
class (48)
    on left: 6 7 8, on right: 2 4
optional_feature_list (49)
    on left: 9 10 11, on right: 6 7
feature_list (50)
    on left: 12 13 14 15 16, on right: 10 15 16
feature (51)
    on left: 17 18 19, on right: 12 14 15 16
optional_assign_expr (52)
    on left: 20 21, on right: 18 58
optional_formal_list (53)
    on left: 22 23, on right: 17
formal_list (54)
    on left: 24 25 26 27, on right: 23 25 26 27
formal (55)
    on left: 28 29 30 31, on right: 24 25 26
expr (56)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53 54 55 56 57, on right: 17 21 32 33 34 36 37 39 40 42
    43 44 45 46 47 48 49 50 51 52 66 67 68 69 71 72 73 78
let_decl (57)
    on left: 58 59, on right: 60 61 62
let_decl_seq (58)
    on left: 60 61 62 63, on right: 39 61 62 63
optional_expr_list (59)
    on left: 64 65, on right: 33 34 35
expr_list (60)
    on left: 66 67 68 69 70, on right: 65 68 69 70
expr_seq (61)
    on left: 71 72 73 74, on right: 38 72 73 74
case_branches (62)
    on left: 75 76 77, on right: 40 76 77
case_branch (63)
    on left: 78 79, on right: 75 76 77


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    3 class_list: error . ';'

    ';'  shift, and go to state 6


State 2

    6 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'
    8      | CLASS . error

    error   shift, and go to state 7
    TYPEID  shift, and go to state 8


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: class_list .
    5 class_list: class_list . error ';'

    error  shift, and go to state 10

    $end  reduce using rule 1 (program)


State 5

    2 class_list: class .
    4           | class . class_list

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end   reduce using rule 2 (class_list)
    error  [reduce using rule 2 (class_list)]

    class_list  go to state 11
    class       go to state 5


State 6

    3 class_list: error ';' .

    $default  reduce using rule 3 (class_list)


State 7

    8 class: CLASS error .

    $default  reduce using rule 8 (class)


State 8

    6 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 12
    '{'       shift, and go to state 13


State 9

    0 $accept: program $end .

    $default  accept


State 10

    5 class_list: class_list error . ';'

    ';'  shift, and go to state 14


State 11

    4 class_list: class class_list .
    5           | class_list . error ';'

    error  shift, and go to state 10

    $end   reduce using rule 4 (class_list)
    error  [reduce using rule 4 (class_list)]


State 12

    7 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 15


State 13

    6 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17

    '}'  reduce using rule 9 (optional_feature_list)

    optional_feature_list  go to state 18
    feature_list           go to state 19
    feature                go to state 20


State 14

    5 class_list: class_list error ';' .

    $default  reduce using rule 5 (class_list)


State 15

    7 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 21


State 16

   11 optional_feature_list: error .
   13 feature_list: error . ';'
   19 feature: error . ';'

    ';'  shift, and go to state 22

    $default  reduce using rule 11 (optional_feature_list)


State 17

   17 feature: OBJECTID . '(' optional_formal_list ')' ':' TYPEID '{' expr '}'
   18        | OBJECTID . ':' TYPEID optional_assign_expr

    '('  shift, and go to state 23
    ':'  shift, and go to state 24


State 18

    6 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 25


State 19

   10 optional_feature_list: feature_list .

    $default  reduce using rule 10 (optional_feature_list)


State 20

   12 feature_list: feature . ';'
   14             | feature . error
   15             | feature . ';' feature_list
   16             | feature . error feature_list

    error  shift, and go to state 26
    ';'    shift, and go to state 27


State 21

    7 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17

    '}'  reduce using rule 9 (optional_feature_list)

    optional_feature_list  go to state 28
    feature_list           go to state 19
    feature                go to state 20


State 22

   13 feature_list: error ';' .
   19 feature: error ';' .

    '}'       reduce using rule 13 (feature_list)
    $default  reduce using rule 19 (feature)


State 23

   17 feature: OBJECTID '(' . optional_formal_list ')' ':' TYPEID '{' expr '}'

    error     shift, and go to state 29
    OBJECTID  shift, and go to state 30

    ')'  reduce using rule 22 (optional_formal_list)

    optional_formal_list  go to state 31
    formal_list           go to state 32
    formal                go to state 33


State 24

   18 feature: OBJECTID ':' . TYPEID optional_assign_expr

    TYPEID  shift, and go to state 34


State 25

    6 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 35


State 26

   14 feature_list: feature error .
   16             | feature error . feature_list

    error     shift, and go to state 36
    OBJECTID  shift, and go to state 17

    '}'  reduce using rule 14 (feature_list)

    feature_list  go to state 37
    feature       go to state 20


State 27

   12 feature_list: feature ';' .
   15             | feature ';' . feature_list

    error     shift, and go to state 36
    OBJECTID  shift, and go to state 17

    '}'  reduce using rule 12 (feature_list)

    feature_list  go to state 38
    feature       go to state 20


State 28

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 39


State 29

   27 formal_list: error . ',' formal_list
   29 formal: error . ':' TYPEID

    ':'  shift, and go to state 40
    ','  shift, and go to state 41


State 30

   28 formal: OBJECTID . ':' TYPEID
   30       | OBJECTID . error TYPEID
   31       | OBJECTID . ':' error

    error  shift, and go to state 42
    ':'    shift, and go to state 43


State 31

   17 feature: OBJECTID '(' optional_formal_list . ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 44


State 32

   23 optional_formal_list: formal_list .

    $default  reduce using rule 23 (optional_formal_list)


State 33

   24 formal_list: formal .
   25            | formal . ',' formal_list
   26            | formal . error formal_list

    error  shift, and go to state 45
    ','    shift, and go to state 46

    ')'  reduce using rule 24 (formal_list)


State 34

   18 feature: OBJECTID ':' TYPEID . optional_assign_expr

    ASSIGN  shift, and go to state 47

    $default  reduce using rule 20 (optional_assign_expr)

    optional_assign_expr  go to state 48


State 35

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 36

   13 feature_list: error . ';'
   19 feature: error . ';'

    ';'  shift, and go to state 22


State 37

   16 feature_list: feature error feature_list .

    $default  reduce using rule 16 (feature_list)


State 38

   15 feature_list: feature ';' feature_list .

    $default  reduce using rule 15 (feature_list)


State 39

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 49


State 40

   29 formal: error ':' . TYPEID

    TYPEID  shift, and go to state 50


State 41

   27 formal_list: error ',' . formal_list

    error     shift, and go to state 29
    OBJECTID  shift, and go to state 30

    formal_list  go to state 51
    formal       go to state 33


State 42

   30 formal: OBJECTID error . TYPEID

    TYPEID  shift, and go to state 52


State 43

   28 formal: OBJECTID ':' . TYPEID
   31       | OBJECTID ':' . error

    error   shift, and go to state 53
    TYPEID  shift, and go to state 54


State 44

   17 feature: OBJECTID '(' optional_formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 55


State 45

   26 formal_list: formal error . formal_list

    error     shift, and go to state 29
    OBJECTID  shift, and go to state 30

    formal_list  go to state 56
    formal       go to state 33


State 46

   25 formal_list: formal ',' . formal_list

    error     shift, and go to state 29
    OBJECTID  shift, and go to state 30

    formal_list  go to state 57
    formal       go to state 33


State 47

   21 optional_assign_expr: ASSIGN . expr

    error       shift, and go to state 58
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr  go to state 73


State 48

   18 feature: OBJECTID ':' TYPEID optional_assign_expr .

    $default  reduce using rule 18 (feature)


State 49

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 50

   29 formal: error ':' TYPEID .

    $default  reduce using rule 29 (formal)


State 51

   27 formal_list: error ',' formal_list .

    $default  reduce using rule 27 (formal_list)


State 52

   30 formal: OBJECTID error TYPEID .

    $default  reduce using rule 30 (formal)


State 53

   31 formal: OBJECTID ':' error .

    $default  reduce using rule 31 (formal)


State 54

   28 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 28 (formal)


State 55

   17 feature: OBJECTID '(' optional_formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 74


State 56

   26 formal_list: formal error formal_list .

    $default  reduce using rule 26 (formal_list)


State 57

   25 formal_list: formal ',' formal_list .

    $default  reduce using rule 25 (formal_list)


State 58

   57 expr: error .

    $default  reduce using rule 57 (expr)


State 59

   55 expr: STR_CONST .

    $default  reduce using rule 55 (expr)


State 60

   32 expr: OBJECTID . ASSIGN expr
   35     | OBJECTID . '(' optional_expr_list ')'
   53     | OBJECTID .

    ASSIGN  shift, and go to state 75
    '('     shift, and go to state 76

    $default  reduce using rule 53 (expr)


State 61

   54 expr: INT_CONST .

    $default  reduce using rule 54 (expr)


State 62

   56 expr: BOOL_CONST .

    $default  reduce using rule 56 (expr)


State 63

   36 expr: IF . expr THEN expr ELSE expr FI

    error       shift, and go to state 58
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr  go to state 77


State 64

   39 expr: LET . let_decl_seq IN expr

    error     shift, and go to state 78
    OBJECTID  shift, and go to state 79

    let_decl      go to state 80
    let_decl_seq  go to state 81


State 65

   37 expr: WHILE . expr LOOP expr POOL

    error       shift, and go to state 58
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr  go to state 82


State 66

   40 expr: CASE . expr OF case_branches ESAC

    error       shift, and go to state 58
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr  go to state 83


State 67

   41 expr: NEW . TYPEID

    TYPEID  shift, and go to state 84


State 68

   42 expr: ISVOID . expr

    error       shift, and go to state 58
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr  go to state 85


State 69

   51 expr: NOT . expr

    error       shift, and go to state 58
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr  go to state 86


State 70

   47 expr: '~' . expr

    error       shift, and go to state 58
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr  go to state 87


State 71

   38 expr: '{' . expr_seq '}'

    error       shift, and go to state 88
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr      go to state 89
    expr_seq  go to state 90


State 72

   52 expr: '(' . expr ')'

    error       shift, and go to state 58
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr  go to state 91


State 73

   21 optional_assign_expr: ASSIGN expr .
   33 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   34     | expr . '.' OBJECTID '(' optional_expr_list ')'
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . LE expr
   50     | expr . '=' expr

    LE   shift, and go to state 92
    '<'  shift, and go to state 93
    '='  shift, and go to state 94
    '-'  shift, and go to state 95
    '+'  shift, and go to state 96
    '*'  shift, and go to state 97
    '/'  shift, and go to state 98
    '@'  shift, and go to state 99
    '.'  shift, and go to state 100

    $default  reduce using rule 21 (optional_assign_expr)


State 74

   17 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 101


State 75

   32 expr: OBJECTID ASSIGN . expr

    error       shift, and go to state 58
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    expr  go to state 102


State 76

   35 expr: OBJECTID '(' . optional_expr_list ')'

    error       shift, and go to state 103
    STR_CONST   shift, and go to state 59
    OBJECTID    shift, and go to state 60
    INT_CONST   shift, and go to state 61
    BOOL_CONST  shift, and go to state 62
    IF          shift, and go to state 63
    LET         shift, and go to state 64
    WHILE       shift, and go to state 65
    CASE        shift, and go to state 66
    NEW         shift, and go to state 67
    ISVOID      shift, and go to state 68
    NOT         shift, and go to state 69
    '~'         shift, and go to state 70
    '{'         shift, and go to state 71
    '('         shift, and go to state 72

    ')'  reduce using rule 64 (optional_expr_list)

    expr                go to state 104
    optional_expr_list  go to state 105
    expr_list           go to state 106


State 77

   33 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   34     | expr . '.' OBJECTID '(' optional_expr_list ')'
   36     | IF expr . THEN expr ELSE expr FI
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . LE expr
   50     | expr . '=' expr

    THEN  shift, and go to state 107
    LE    shift, and go to state 92
    '<'   shift, and go to state 93
    '='   shift, and go to state 94
    '-'   shift, and go to state 95
    '+'   shift, and go to state 96
    '*'   shift, and go to state 97
    '/'   shift, and go to state 98
    '@'   shift, and go to state 99
    '.'   shift, and go to state 100


State 78

   59 let_decl: error .
   63 let_decl_seq: error . let_decl_seq

    error     shift, and go to state 78
    OBJECTID  shift, and go to state 79

    error  [reduce using rule 59 (let_decl)]
    IN     reduce using rule 59 (let_decl)
    ','    reduce using rule 59 (let_decl)

    let_decl      go to state 80
    let_decl_seq  go to state 108


State 79

   58 let_decl: OBJECTID . ':' TYPEID optional_assign_expr

    ':'  shift, and go to state 109


State 80

   60 let_decl_seq: let_decl .
   61             | let_decl . ',' let_decl_seq
   62             | let_decl . error let_decl_seq

    error  shift, and go to state 110
    ','    shift, and go to state 111

    IN  reduce using rule 60 (let_decl_seq)


State 81

   39 expr: LET let_decl_seq . IN expr

    IN  shift, and go to state 112


State 82

   33 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   34     | expr . '.' OBJECTID '(' optional_expr_list ')'
   37     | WHILE expr . LOOP expr POOL
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . LE expr
   50     | expr . '=' expr

    LOOP  shift, and go to state 113
    LE    shift, and go to state 92
    '<'   shift, and go to state 93
    '='   shift, and go to state 94
    '-'   shift, and go to state 95
    '+'   shift, and go to state 96
    '*'   shift, and go to state 97
    '/'   shift, and go to state 98
    '@'   shift, and go to state 99
    '.'   shift, and go to state 100


State 83

   33 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   34     | expr . '.' OBJECTID '(' optional_expr_list ')'
   40     | CASE expr . OF case_branches ESAC
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . LE expr
   50     | expr . '=' expr

    OF   shift, and go to state 114
    LE   shift, and go to state 92
    '<'  shift, and go to state 93
    '='  shift, and go to state 94
    '-'  shift, and go to state 95
    '+'  shift, and go to state 96
    '*'  shift, and go to state 97
    '/'  shift, and go to state 98
    '@'  shift, and go to state 99
    '.'  shift, and go to state 100


State 84

   41 expr: NEW TYPEID .

    $default  reduce using rule 41 (expr)


State 85

   33 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   34     | expr . '.' OBJECTID '(' optional_expr_list ')'
   42     | ISVOID expr .
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . LE expr
   50     | expr . '=' expr

    '@'  shift, and go to state 99
    '.'  shift, and go to state 100

    $default  reduce using rule 42 (expr)


State 86

   33 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   34     | expr . '.' OBJECTID '(' optional_expr_list ')'
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   48     | expr . '<' expr
   49     | expr . LE expr
   50     | expr . '=' expr
   51     | NOT expr .

    LE   shift, and go to state 92
    '<'  shift, and go to state 93
    '='  shift, and go to state 94
    '-'  shift, and go to state 95
    '+'  shift, and go to state 96
    '*'  shift, and go to state 97
    '/'  shift, and go to state 98
    '@'  shift, and go to state 99
    '.'  shift, and go to state 100

    $default  reduce using rule 51 (expr)


State 87

   33 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   34     | expr . '.' OBJECTID '(' optional_expr_list ')'
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | '~' expr .
   48     | expr . '<' expr
   49     | expr . LE expr
   50     | expr . '=' expr

    '@'  shift, and go to state 99
    '.'  shift, and go to state 100

    $default  reduce using rule 47 (expr)


State 88

   57 expr: error .
   74 expr_seq: error . expr_seq

    error       shift, and go to state 88
    STR_CONST   shift, and go to state 59
